# dotscale

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  index.html
.github/workflows/: ci.yml
report/: web_generator.go
report/web/: index.html
src/: encode.go  main.go  main.rs  scale.go
