[package]
name = "dotscale"
version = "0.1.0"
authors = ["Aryan tikarya <aryantikarya9@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[dependencies.parity-scale-codec]
version = "1.3.5"